# Kea2-monkey

./: README.md  multi_kea2.py
Kea2/: DEVELOP.md  LICENSE  README.md  README_cn.md  guide_scripts.py  pyproject.toml  quickstart.py  temp.md
Kea2/.github/ISSUE_TEMPLATE/: feat-request.yml
Kea2/.github/reviewed/: blacklisting_cn_reviewed.md  manual_cn_reviewed.md
Kea2/.github/workflows/: google-verification.yml  markdown-translation-update.yml  readme_update_translation.yml
Kea2/docs/: Scenario_Examples_zh.md  XPATH_en.md  blacklisting.md  blacklisting_cn.md  manual_cn.md  manual_en.md  test_report_introduction.md
Kea2/github/: translation-list.yml
Kea2/github/ISSUE_TEMPLATE/: issue-report.yml
Kea2/github/reviewed/: README_cn_reviewed.md
Kea2/github/scripts/: gpt_translator.py  identify_changed_files.py  translate_changed_files.py
Kea2/github/workflows/: python-publish.yml  test.yml
Kea2/hybridtest_examples/: appium_pytest_example.py  appium_unittest_example.py  u2_pytest_example.py  u2_unittest_example.py
Kea2/kea2/: __init__.py  absDriver.py  adbUtils.py  cli.py  fastbotManager.py  kea2_api.py  keaUtils.py  kea_launcher.py  logWatcher.py  mixin.py  resultSyncer.py  u2Driver.py  utils.py  version_manager.py
Kea2/kea2/assets/: config_version.json  quicktest.py
Kea2/kea2/report/: bug_report_generator.py  mixin.py  report_merger.py  utils.py
Kea2/properties/: Omninotes_Sample.py
Kea2/tests/: hidden_widget_result.xml  hidden_widget_test.xml  run_emulators.sh  smoke.sh  test_u2Selector.py  test_xpath.py  xpath_test.xml
configs/: awl.strings  (+5 more)
(+5 files in other folders)
