[project]
name = "Kea2-python"
version = "1.0.5"
description = "A python library for supporting and customizing automated UI testing for mobile apps"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rtree>=1.3.0",
    "jinja2>=3.0.0",
    "uiautomator2>=3.3.3",
    "adbutils>=2.9.3",
    "packaging>=25.0",
]
authors = [
    { name = "Xixian Liang", email = "xixian@stu.ecnu.edu.cn" }
]

[project.scripts]
kea2 = "kea2.cli:main"

[tool.setuptools.packages.find]
include = ["kea2*"]

[tool.setuptools.package-data]
kea2 = [
    "assets/**/*", 
    "report/templates/**/*"
]

